--- a/HW/HW1/560Sp23HW1.ipynb
+++ b/HW/HW1/560Sp23HW1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmRalhH/opxti7vwVJZt0F",
+      "authorship_tag": "ABX9TyNiPHGtDZJsahYG0WY4Bgpa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "Hyvc5temjx_X",
         "colab": {
@@ -78,10 +78,30 @@
         "$\\newcommand\\erm{\\end{rmat}}$\n",
         "$\\newenvironment{cmat}{\\left[\\begin{array}{ccccccccc}}{\\end{array}\\right]}$\n",
         "$\\newcommand\\bcm{\\begin{cmat}}$\n",
-        "$\\newcommand\\ecm{\\end{cmat}}$"
+        "$\\newcommand\\ecm{\\end{cmat}}$\n",
+        "\n",
+        "# Homework 1\n",
+        "## Homework guideline\n",
+        "- The deadline is Feb 10th 10:30am. Submission after the deadline will not be graded. \n",
+        "\n",
+        "- Submit your work(your reasoning and your code) as a SINGLE .ipynb document. Please rename the document as _HW1_YOURNAME.ipynb_ (for example, _HW1_FELIX.ipynb_). You are responsible for checking that you have correctly submitted the correct document. If your code cannot run, you may receive NO point. \n",
+        "\n",
+        "- Please justify all short answers with a brief explanation. If you use latex command in the markdown, **2 points** bonus will be awarded.   \n",
+        "\n",
+        "- You only use the Python packages included in the following cell. You are not allowed to use other advanced package or modules unless you are permitted to. \n",
+        "\n",
+        "- In your final submission include the plots produced by the unedited code as presented below, as well as any additional plots produced after editing the code during the course of a problem. You may find it necessary to copy/paste relevant code into additional cells to accomplish this.\n",
+        "\n",
+        "- Feel free to use the lecture notes and other resources. But you\n",
+        "must understand, write, and hand in your own answers. In addition, you must write and submit\n",
+        "your own code in the programming part of the assignment (we may run your code).\n",
+        "If you copy someone else homework solution, both of you may receive ZERO point. \n",
+        "\n",
+        "\n",
+        "- Colab is preferred. However, if you use Anaconda, please download the data file locally and save it to the same folder as this homework file. "
       ],
       "metadata": {
-        "id": "NQOV5w5InZFI"
+        "id": "9AmXQxgysfoV"
       }
     },
     {
@@ -415,7 +435,7 @@
         "id": "wt_i5XXN5Ad0",
         "outputId": "440fe7c8-8dd6-4b9e-9d3f-2b11f127daa1"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -453,7 +473,7 @@
         "id": "XbHZbi3j5CUz",
         "outputId": "f354f0a9-ed8d-4513-cdb7-670c03062bcf"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
