--- a/HW/HW4/560Sp23HW4Q1.ipynb
+++ b/HW/HW4/560Sp23HW4Q1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOwKpLUyP0cC3ve6VjRhwVf",
+      "authorship_tag": "ABX9TyN+C1fPhgajmdjfQ9VqXrvz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,6 +53,48 @@
         "plt.rcParams['image.interpolation'] = 'nearest'\n",
         "plt.rcParams['image.cmap'] = 'gray'"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$\\def\\m#1{\\mathbf{#1}}$\n",
+        "$\\def\\mm#1{\\boldsymbol{#1}}$\n",
+        "$\\def\\mb#1{\\mathbb{#1}}$\n",
+        "$\\def\\c#1{\\mathcal{#1}}$\n",
+        "$\\def\\mr#1{\\mathrm{#1}}$\n",
+        "$\\newenvironment{rmat}{\\left[\\begin{array}{rrrrrrrrrrrrr}}{\\end{array}\\right]}$\n",
+        "$\\newcommand\\brm{\\begin{rmat}}$\n",
+        "$\\newcommand\\erm{\\end{rmat}}$\n",
+        "$\\newenvironment{cmat}{\\left[\\begin{array}{ccccccccc}}{\\end{array}\\right]}$\n",
+        "$\\newcommand\\bcm{\\begin{cmat}}$\n",
+        "$\\newcommand\\ecm{\\end{cmat}}$\n",
+        "# Homework 4\n",
+        "## Homework guideline\n",
+        "- The deadline is Apr 19th 10:30am. Submission after the deadline will not be graded. \n",
+        "\n",
+        "\n",
+        "- Submit your work(your reasoning and your code) as a SINGLE .ipynb document. Please rename the document as _HW1_YOURNAME.ipynb_ (for example, _HW1_FELIX.ipynb_). You are responsible for checking that you have correctly submitted the correct document. If your code cannot run, you may receive NO point. \n",
+        "\n",
+        "- Please justify all short answers with a brief explanation. \n",
+        "\n",
+        "\n",
+        "\n",
+        "- You only use the Python packages included in the following cell. You are not allowed to use other advanced package or modules unless you are permitted to. \n",
+        "\n",
+        "- In your final submission include the plots produced by the unedited code as presented below, as well as any additional plots produced after editing the code during the course of a problem. You may find it necessary to copy/paste relevant code into additional cells to accomplish this.\n",
+        "\n",
+        "- Feel free to use the lecture notes and other resources. But you\n",
+        "must understand, write, and hand in your own answers. In addition, you must write and submit\n",
+        "your own code in the programming part of the assignment (we may run your code).\n",
+        "If you copy someone else homework solution, both of you may receive ZERO point. \n",
+        "\n",
+        "\n",
+        "- Colab is preferred. However, if you use Anaconda, please download the .mat file locally and save it to the same folder as this homework file. \n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "etnbO0ilujia"
+      }
     },
     {
       "cell_type": "markdown",
