--- a/HW/HW2/560Sp23HW2.ipynb
+++ b/HW/HW2/560Sp23HW2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+6rhUBu369z5v5RAKboRR",
+      "authorship_tag": "ABX9TyMam7uK8Ch8pXx2yaBarpAg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -112,24 +112,7 @@
       "source": [
         "# Q1: Markov Chain (35pt)\n",
         "\n",
-        "\n",
-        "---\n",
-        "\n",
-        "\n",
-        "## Q1.1: Which of the following is a Markov chain (20pt)\n",
-        "\n",
-        "A six-sided die is rolled repeatedly. Which of the following a Markov chain? For those\n",
-        "that are, find the transition matrix. \n",
-        "\n",
-        "- $X_n$ is the largest number rolled up to the $n$th roll. \n",
-        "\n",
-        "\n",
-        "- $X_n$ is the number of sixes rolled in the first $n$ rolls. \n",
-        "\n",
-        "- At time $n$, $X_n$ is the time since the last six\n",
-        "was rolled. \n",
-        "\n",
-        "- At time $n$, $X_n$ is the time until the next six is rolled.\n"
+        "\n"
       ],
       "metadata": {
         "id": "wL-8MIwOcx5D"
@@ -138,18 +121,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Your Solution:"
-      ],
-      "metadata": {
-        "id": "x1QZz1YbOo1B"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "---\n",
         "\n",
-        "## Q1.2: Transition Matrices (15pt) \n",
+        "## Q1.1 (15pt) \n",
         "Three different Markov Chains are defined by the following transition matrices: \n",
         "\\begin{align}\n",
         "\\bcm 1/3 & 1/3 & 1/3 \\\\\n",
@@ -184,6 +158,88 @@
       ],
       "metadata": {
         "id": "m4VkpQs2goqY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Q1.2 (10pt)\n",
+        "Let $\\{X_n\\}$ be a Markov chain with transition matrix \n",
+        "\\begin{align}\n",
+        "\\m{P} = \\bcm 1-2p & 2p &0 \\\\\n",
+        "         p & 1-2p  & p \\\\\n",
+        "         0 & 2p & 1-2p\\ecm\n",
+        "\\end{align}\n",
+        "with $p\\in (0,1)$. Find $\\m{P}^n$, the invariant distribution $\\pi$ and the mean-recurrence times $\\mb{E}_i[T_i]$ for $i=1,2,3$."
+      ],
+      "metadata": {
+        "id": "HdVDEAPiR8m8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Your Solution:"
+      ],
+      "metadata": {
+        "id": "tY-x_jGCUHuQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "## Q1.3 (10pt)\n",
+        "A Markov chain on $S=\\{0,1,\\dots, N\\}$ has transition probabilities $P(0,0) = 1-\\lambda_0, P(i,i+1)=\\lambda_i, P(i+1, i) =\\mu_{i+1}$ for $i=0,\\dots, N-1$ and $P(N,N)=1-\\mu_N$. Show that the process\n",
+        "is reversible in equilibrium.  "
+      ],
+      "metadata": {
+        "id": "psx9t0j6UMHP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Your Solution:"
+      ],
+      "metadata": {
+        "id": "PR1JFsZBVj7x"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "## Q1.4: (extra credit question)\n",
+        "Prove the following two statements. \n",
+        "\n",
+        "- $P_i(N_i=\\infty)=1 ⇔ P_i(T_i<\\infty) =1. $\n",
+        "\n",
+        "- $P_i(T_i<\\infty) < 1 ⇔ P_i(N_i=\\infty)=0 ⇔ \\mb{E}_i[N_i]<\\infty$"
+      ],
+      "metadata": {
+        "id": "XmLmV4TUgEHG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Your Solution:"
+      ],
+      "metadata": {
+        "id": "nyZ29BHEiWPE"
       }
     },
     {
