--- a/HW/HW2/560Sp23HW2.ipynb
+++ b/HW/HW2/560Sp23HW2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMam7uK8Ch8pXx2yaBarpAg",
+      "authorship_tag": "ABX9TyNYXfW395y39u2bLArAEwhD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,7 +110,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Q1: Markov Chain (35pt)\n",
+        "# Q1: Markov Chain (45pt)\n",
         "\n",
         "\n"
       ],
@@ -198,8 +198,12 @@
         "\n",
         "\n",
         "## Q1.3 (10pt)\n",
-        "A Markov chain on $S=\\{0,1,\\dots, N\\}$ has transition probabilities $P(0,0) = 1-\\lambda_0, P(i,i+1)=\\lambda_i, P(i+1, i) =\\mu_{i+1}$ for $i=0,\\dots, N-1$ and $P(N,N)=1-\\mu_N$. Show that the process\n",
-        "is reversible in equilibrium.  "
+        "Prove the following statement: \n",
+        "\n",
+        "Recurrence is a communication class property, i.e. if $i↔j$ and $i$ is recurrent, then $j$ is\n",
+        "recurrent.\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "psx9t0j6UMHP"
@@ -222,7 +226,7 @@
         "---\n",
         "\n",
         "\n",
-        "## Q1.4: (extra credit question)\n",
+        "## Q1.4 (10pt)\n",
         "Prove the following two statements. \n",
         "\n",
         "- $P_i(N_i=\\infty)=1 ⇔ P_i(T_i<\\infty) =1. $\n",
@@ -284,15 +288,14 @@
         "\n",
         "---\n",
         "\n",
-        "\n",
-        "## Q2.2 Coin Triplets I (10pt)\n",
-        "If you keep on tossing a fair coin, \n",
-        "- What is the expected number of tosses such that you can have HHH (heads heads heads) in a row? \n",
-        "\n",
-        "- What is the expected number of tosses to have THH (tails heads heads) in a row?"
+        "## Q2.2: Dice Problem (10pt)\n",
+        "Two players bet on roll(s) of the total of two standard six-face dice. Player A bets that a\n",
+        "sum of 12 will occur first. Player B bets that two consecutive 7s will occur first. The\n",
+        "players keep rolling the dice and record the sums until one player wins. What is the\n",
+        "probability that A will win?\n"
       ],
       "metadata": {
-        "id": "2ijTWH89vWq7"
+        "id": "a-3P1K27vbae"
       }
     },
     {
@@ -301,7 +304,7 @@
         "# Your Solution:"
       ],
       "metadata": {
-        "id": "-HDu0JT0veMr"
+        "id": "QbBaHmLjv3wz"
       }
     },
     {
@@ -316,7 +319,7 @@
         "---\n",
         "\n",
         "\n",
-        "# Q3: Markov Chain Simulation (30pt)\n",
+        "# Q3: Markov Chain Simulation (35pt)\n",
         "\n",
         "In the question, you are going to implement the time homogenous Markov Chain simuation. We would like to simulate the Markov chain for $T$ steps when given transition matrix and initial probability vector.\n",
         "\n",
@@ -398,7 +401,7 @@
         "---\n",
         "\n",
         "\n",
-        "## Q3.2: Use Monte Carlo simulatation to verify Q2.1 (10pt)\n",
+        "## Q3.2: Use Monte Carlo simulatation to verify Q2.1 (15pt)\n",
         "Design a Monte Carlo Simulation experiment to verify your solution in Q2.1. Note \n",
         "- You need to specifiy the transition matrix and initial probability vector by yourself.  \n",
         "\n",
@@ -429,150 +432,6 @@
       "metadata": {
         "id": "5hseGxzjsC-h"
       }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "\n",
-        "\n",
-        "---\n",
-        "\n",
-        "\n",
-        "\n",
-        "---\n",
-        "\n",
-        "\n",
-        "# Q4: Implement PageRank Algorithm (15pt)\n",
-        "## Data Loading\n",
-        "First of all, we authenticate a Google Drive client to download the dataset we will be processing in this Colab.\n",
-        "\n",
-        "**Make sure to follow the interactive instructions.**\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "yy-bzMgQI3tL"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from pydrive.auth import GoogleAuth\n",
-        "from pydrive.drive import GoogleDrive\n",
-        "from google.colab import auth\n",
-        "from oauth2client.client import GoogleCredentials\n",
-        "\n",
-        "# Authenticate and create the PyDrive client\n",
-        "auth.authenticate_user()\n",
-        "gauth = GoogleAuth()\n",
-        "gauth.credentials = GoogleCredentials.get_application_default()\n",
-        "drive = GoogleDrive(gauth)\n",
-        "\n",
-        "id='1EoolSK32_U74I4FeLox88iuUB_SUUYsI'\n",
-        "downloaded = drive.CreateFile({'id': id})\n",
-        "downloaded.GetContentFile('web-Stanford.txt')"
-      ],
-      "metadata": {
-        "id": "WLvEg4HRJC64"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "If you executed the cells above, you should be able to see the dataset we will use for this Colab under the \"Files\" tab on the left panel.\n",
-        "\n",
-        "For this Colab we will be using [NetworkX](https://networkx.github.io), a Python package for the creation, manipulation, and study of the structure, dynamics, and functions of complex networks.\n",
-        "\n",
-        "If you want to explore NetworkX more, consider following [this tutorial](https://networkx.org/documentation/stable/tutorial.html).\n",
-        "\n",
-        "The dataset we will analyze is a snapshot of the Web Graph centered around [stanford.edu](https://stanford.edu), collected in 2002. Nodes represent pages from Stanford University (stanford.edu) and directed edges represent hyperlinks between them. [[More Info]](http://snap.stanford.edu/data/web-Stanford.html). \n",
-        "\n",
-        "The dataset is massive so brute force method is not possible. "
-      ],
-      "metadata": {
-        "id": "EKAf9dr4JILE"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# load the graph as directed graph\n",
-        "import networkx as nx\n",
-        "G = nx.read_edgelist('web-Stanford.txt', create_using=nx.MultiDiGraph )\n",
-        "print(nx.info(G))"
-      ],
-      "metadata": {
-        "id": "GPFi5CSqJLP8"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "W = nx.adjacency_matrix(G)\n",
-        "print(W.shape)"
-      ],
-      "metadata": {
-        "id": "9-RcPOZgJNIy"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr = sum(W,axis=1)\n",
-        "np.asarray(arr).reshape(-1)\n",
-        "arr[arr==0].shape"
-      ],
-      "metadata": {
-        "id": "-ckR-6JuJO7o"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# nodes of G in the following order \n",
-        "# nodes are not in the order of '1', '2', '3', ...\n",
-        "print(G.nodes)"
-      ],
-      "metadata": {
-        "id": "9gxcbLQcJXLP"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "The markov matrix $P_\\alpha=\\alpha D^{-1}W +(1-\\alpha) E$, where $E=\\frac{1}{N}\\mathbb{1}\\mathbb{1}^\\top$. In pagerank, $\\alpha$ is set as 0.85. \n",
-        " We will implement power method to caclulate the stationary distribution. \n",
-        "\n",
-        "- Initialize the row vector: $\\mathbf{r}^{(0)}=\\frac{1}{N}\\mathbb{1}$.\n",
-        "\n",
-        "- Iterate for $i$ from 1 to $k$, $\\mathbf{r}^{(i+1)}=\\mathbf{r}^{(i)}P_\\alpha$. $P_\\alpha$ is NOT sparse and you should not explicitly write up $P_\\alpha$, instead you should implement the sparse multiplcation. \n",
-        "\n",
-        "- Please set up your own stopping criteria and stop the iteration if needed.   "
-      ],
-      "metadata": {
-        "id": "r4byUaBTJaxN"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Your code starts here"
-      ],
-      "metadata": {
-        "id": "IOSiddp2Jgpw"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
