--- a/HW/HW1/560Sp23HW1.ipynb
+++ b/HW/HW1/560Sp23HW1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO+D+8o4+CdA+qdZ4oGQJMF",
+      "authorship_tag": "ABX9TyOoqAQaO1t5eNLNmgf66R+3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -222,83 +222,17 @@
         "---\n",
         "\n",
         "\n",
-        "---\n",
-        "\n",
-        "\n",
-        "\n",
-        "# Q3: Coin Toss Game (20pt)\n",
-        "\n",
-        "\n",
-        "\n",
-        "Two players, A and B, alternatively toss a fair coin (A tosses the coin first, then B tosses\n",
-        "the coin, then A, then B .. . ). The sequence of heads and tails is recorded. If there is a\n",
-        "head followed by a tail (HT subsequence), the game ends and the person who tosses the\n",
-        "tail wins. \n",
-        "\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## Q3.1: Theory (10pt)\n",
-        "What is the probability that A wins the game?\n"
-      ],
-      "metadata": {
-        "id": "YNwSVnpM6a97"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Your Solution:"
-      ],
-      "metadata": {
-        "id": "UudTPil26dL3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "\n",
         "\n",
         "---\n",
         "\n",
         "\n",
-        "## Q3.2: Design (10pt)\n",
-        "Design a Monte Carlo Simulation using numpy and scipy to verify your solution. \n"
-      ],
-      "metadata": {
-        "id": "lFf5110hG7ET"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# your code starts here"
-      ],
-      "metadata": {
-        "id": "OLk9xFx5HJXB"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
+        "# Q3: Gaussian Distribution (30pt)\n",
         "\n",
         "\n",
         "---\n",
         "\n",
-        "\n",
-        "\n",
-        "---\n",
-        "\n",
-        "\n",
-        "# Q4: Gaussian Distribution (20pt)\n",
-        "\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## Q4.1: Moments (10pt)\n",
-        "If $\\m{X}$ follows standard normal distribution ( $\\m{X} \\sim \\c{N}(0, 1)$ ), what is $\\mb{E}[\\m{X}^n]$ for $n = 1, 2, 3$\n",
+        "## Q3.1: Moments (15pt)\n",
+        "If $\\m{X}$ follows standard normal distribution ( $\\m{X} \\sim N(0, 1)$ ), what is $\\mb{E}[\\m{X}^n]$ for $n = 1, 2, 3$\n",
         "and 4?\n"
       ],
       "metadata": {
@@ -322,8 +256,8 @@
         "---\n",
         "\n",
         "\n",
-        "## Q4.2: Posterior of the mean of a Gaussian with known variance (10pt)\n",
-        "Given i.i.d. data $\\c{D}= \\{x^{(i)}\\}_{i=1}^N$, compute $p(\\mu| \\c{D}, \\sigma^2)$ for the Bayesian model,\n",
+        "## Q3.2: Posterior of the mean of a Gaussian with known variance (15pt)\n",
+        "Given i.i.d. data $D= \\{x^{(i)}\\}_{i=1}^N$, compute $p(\\mu| D, \\sigma^2)$ for the Bayesian model,\n",
         "\\begin{align}\n",
         "p(x|\\mu) = \\frac{1}{\\sqrt{2\\pi\\sigma^2}}\\exp\\left[-\\frac{(x-\\mu)^2}{2\\sigma^2}\\right]\n",
         "\\end{align}\n",
@@ -335,7 +269,7 @@
         "\n",
         "**Hint**: You may use that\n",
         "\\begin{align}\n",
-        "\\c{N}(x; m_1, \\sigma_1^2) \\c{N}(x; m_2, \\sigma_2^2) \\propto \\c{N}(x; m_3, \\sigma_3^2) \n",
+        "N(x; m_1, \\sigma_1^2) N(x; m_2, \\sigma_2^2) \\propto N(x; m_3, \\sigma_3^2) \n",
         "\\end{align}\n",
         "where $$\\sigma_3^2 =\\left(\\frac{1}{\\sigma^2_1}+\\frac{1}{\\sigma^2_2}\\right)^{-1} $$ and \n",
         "$$ m_3 = \\sigma^2_3\\left(\\frac{m_1}{\\sigma_1^2}+\\frac{m_2}{\\sigma_2^2}\\right)$$\n",
@@ -366,7 +300,35 @@
         "---\n",
         "\n",
         "\n",
-        "# Q5: Which of the following is a Markov chain (20pt)\n",
+        "# Q4: Markov Chain (30pt)\n",
+        "## Q4.1 (10pt)\n",
+        "Let $X$ be a simple random walk (i.e., $X$ increases by one with probability $p$ and decreases by 1 with probability $q$) and $Y_n=X_{2n}$. Compute the transition matrix for $Y$."
+      ],
+      "metadata": {
+        "id": "idKthh-iaVJ3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Your Solution:"
+      ],
+      "metadata": {
+        "id": "_UrIlo9hBOpQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "# Q4.2: Which of the following is a Markov chain (20pt)\n",
         "\n",
         "A six-sided die is rolled repeatedly. Which of the following a Markov chain? For those\n",
         "that are, find the transition matrix. \n",
@@ -391,7 +353,7 @@
         "# Your Solution:"
       ],
       "metadata": {
-        "id": "_UrIlo9hBOpQ"
+        "id": "fwTjWs_lau7U"
       }
     }
   ]
