--- a/syllabus/sp23/sp23.tex
+++ b/syllabus/sp23/sp23.tex
@@ -25,7 +25,7 @@
 
 \textbf{Lectures:} TTh 10:30AM-11:50AM @ Humanities 108
 
-\textbf{Instructor Office Hours:}   TTh 3pm-4pm @ Open Space across Catskill 337
+\textbf{Instructor Office Hours:}   T 2:30pm-3pm  Th 3pm-4pm @Catskill 383
 
 
 \textbf{E-Mail Address:} xye2@albany.edu\\
@@ -37,11 +37,11 @@ Check the course page in blackboard regularly. Homework assignments, course anno
 
 \textbf{Course Description:} 	
 	
-An introduction to applied stochastic processes. Topics include Exponential family distribution, Markov chain, Variational inference, Probabilistic graphical models, Hidden markov models, EM algorithm, Kalman filter and particle filter, generative models including GAN and VAE. If time permitted, I will talk about diffusion models. 
+An introduction to applied stochastic processes. Topics include Markov chain, inference on Markov chain, Hidden Markov models, EM algorithm, Monte Carlo methods. I will focus the applications on language models.
 
 This course is significantly harder than AMAT 554, so students should expect to devote substantial time every week on this course. As a remark, students are expected to devote at least 30 hours on each homework set. 
 
-In addition, the students will practice basic programming skills to use software tools in applied statistics. The programming language in this course will be Jupyter notebook. 
+In addition, the students will practice basic programming skills to use software tools in statistics. The programming language in this course will be Python. 
 
 All latest notebook can be downloaded in https://github.com/yexf308/AppliedStochasticProcess. I will keep updating this git repository as class progresses, so please fetch the update regularly. I will also leave a copy (not most updated) version in blackboard. 
 
@@ -77,7 +77,7 @@ class in the following year.
 Late assignment turn-in is not permitted. Any assignment turned in after the deadline will NOT be graded.
 
 
-
+\textbf{Bonus point:} Students are encouraged to present the homework projects in the showcase day (Apr 27th). A successful presentation can count at most 40 bonus point to your total grade. 
 
 \textbf{Attendance:} Although attendance will not be taken, I strongly encourage you attend and participate in every lecture. This is one of the best ways to ensure success in the course.
 
