--- a/syllabus/sp23/sp23.tex
+++ b/syllabus/sp23/sp23.tex
@@ -72,7 +72,7 @@ class in the following year.
 
 
 
-\textbf{Homework:} Homework assignments will be assigned every three weeks. There are 5 sets of homework in total. 
+\textbf{Homework:} Homework assignments will be assigned every three weeks. There are 4-5 sets of homework in total. 
 
 Late assignment turn-in is not permitted. Any assignment turned in after the deadline will NOT be graded.
 
