--- a/HW/HW2/560Sp23HW2.ipynb
+++ b/HW/HW2/560Sp23HW2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNYXfW395y39u2bLArAEwhD",
+      "authorship_tag": "ABX9TyN5Jy78dG9qXBNlGCfPW9R/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
         "$\\newcommand\\ecm{\\end{cmat}}$\n",
         "# Homework 2\n",
         "## Homework guideline\n",
-        "- The deadline is Mar 8th 10:30am. Submission after the deadline will not be graded. \n",
+        "- The deadline is Mar 10th 10:30am. Submission after the deadline will not be graded. \n",
         "\n",
         "- Submit your work(your reasoning and your code) as a SINGLE .ipynb document. Please rename the document as _HW1_YOURNAME.ipynb_ (for example, _HW1_FELIX.ipynb_). You are responsible for checking that you have correctly submitted the correct document. If your code cannot run, you may receive NO point. \n",
         "\n",
@@ -299,6 +299,8 @@
         "\n",
         "\n",
         "# Q3: Markov Chain Simulation (35pt)\n",
+        "\n",
+        "**This problem together with Q1 and Q2 in HW1 can be used to present in showcase day as extra credits.**\n",
         "\n",
         "In the question, you are going to implement the time homogenous Markov Chain simuation. We would like to simulate the Markov chain for $T$ steps when given transition matrix and initial probability vector.\n",
         "\n",
