--- a/MonteCarloSimulation.ipynb
+++ b/MonteCarloSimulation.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNamXnEI+mwvT9MhpdWoHBL",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,24 +15,14 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/yexf308/AppliedStochasticProcess/blob/main/MonteCarloSimulation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "v7L2fqnDLAP0",
-        "outputId": "066adccc-1783-47e7-b878-47183aab2e43"
+        "outputId": "ef86dcbb-29d7-4a54-a5aa-2d10f11413a1"
       },
       "outputs": [
         {
@@ -122,7 +110,7 @@
       "metadata": {
         "id": "2rxk2YjNPFnn"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -150,40 +138,45 @@
       "source": [
         "# Inputs\n",
         "num_simulations = 10000\n",
-        "max_num_rolls = 1000\n",
+        "max_num_rolls = 5000\n",
         "bet = 1\n",
         "\n",
         "# Tracking\n",
-        "win_probability = []\n",
-        "end_balance = []\n",
-        "\n",
+        "#win_probability = []\n",
+        "#end_balance = []\n",
+        "sum_end_balance =0 \n",
+        "sum_win_probability = 0\n",
         "\n",
         "# For loop to run for the number of simulations desired\n",
         "for i in range(num_simulations):\n",
-        "    balance = [1000]\n",
-        "    num_rolls = [0]\n",
+        "    balance = 1000\n",
+        "    num_rolls = 0\n",
         "    num_wins = 0\n",
         "    # Run until the player has rolled 1,000 times\n",
-        "    while num_rolls[-1] < max_num_rolls:\n",
+        "    while num_rolls <= max_num_rolls and balance >0 :\n",
         "        same = roll_dice()\n",
         "        # Result if the dice are the same number\n",
         "        if same:\n",
-        "            balance.append(balance[-1] + 4 * bet)\n",
+        "            balance = balance + 4 * bet\n",
         "            num_wins += 1\n",
         "        # Result if the dice are different numbers\n",
         "        else:\n",
-        "            balance.append(balance[-1] - bet)\n",
+        "            balance= balance - bet\n",
         "\n",
-        "        num_rolls.append(num_rolls[-1] + 1)\n",
+        "        num_rolls=num_rolls + 1 \n",
         "# Store tracking variables and add line to figure\n",
-        "    win_probability.append(num_wins/num_rolls[-1])\n",
-        "    end_balance.append(balance[-1])\n",
+        "    #win_probability.append(num_wins/num_rolls)\n",
+        "    #end_balance.append(balance)\n",
+        "    sum_win_probability = sum_win_probability + num_wins/num_rolls\n",
+        "    sum_end_balance = sum_end_balance + balance\n",
         "\n",
         "\n",
         "\n",
         "# Averaging win probability and end balance\n",
-        "overall_win_probability = sum(win_probability)/len(win_probability)\n",
-        "overall_end_balance = sum(end_balance)/len(end_balance)\n",
+        "overall_win_probability = sum_win_probability / num_simulations\n",
+        "overall_end_balance = sum_end_balance/ num_simulations\n",
+        "#overall_win_probability = sum(win_probability)/len(win_probability)\n",
+        "#overall_end_balance = sum(end_balance)/len(end_balance)\n",
         "# Displaying the averages\n",
         "print(\"Average win probability after \" + str(num_simulations) + \" runs: \" + str(overall_win_probability))\n",
         "print(\"Average ending balance after \" + str(num_simulations) + \" runs: $\" + str(overall_end_balance))    \n"
@@ -193,16 +186,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vFejBcO3PWoX",
-        "outputId": "4ac18411-06bc-47bf-d2d2-8d546aa346ef"
+        "outputId": "2d6af14d-3f5d-4aac-8705-f1ebf7d01c66"
       },
-      "execution_count": 6,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Average win probability after 10000runs: 0.16682709999999998\n",
-            "Average ending balance after 10000 runs: $834.1355\n"
+            "Average win probability after 10000 runs: 0.1665880586933922\n",
+            "Average ending balance after 10000 runs: $173.2775\n"
           ]
         }
       ]
