--- a/HW/HW4/560Sp23HW4.ipynb
+++ b/HW/HW4/560Sp23HW4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNo79Z6Nd4kDOwvmcy7F6oB",
+      "authorship_tag": "ABX9TyOHDulm9UokFalLGDV/Glji",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,18 +32,51 @@
         "!pip install 'networkx<2.7'"
       ],
       "metadata": {
-        "id": "A_NwQ8AJlvzx"
+        "id": "A_NwQ8AJlvzx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0c95cffa-4400-4e6f-ef04-08da49a9faa6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting networkx<2.7\n",
+            "  Downloading networkx-2.6.3-py3-none-any.whl (1.9 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.9/1.9 MB\u001b[0m \u001b[31m36.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: networkx\n",
+            "  Attempting uninstall: networkx\n",
+            "    Found existing installation: networkx 3.0\n",
+            "    Uninstalling networkx-3.0:\n",
+            "      Successfully uninstalled networkx-3.0\n",
+            "Successfully installed networkx-2.6.3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "lBBt9p6AW1-l"
+        "id": "lBBt9p6AW1-l",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a563bc37-8a83-42a3-e803-642b7fabf2bd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Populating the interactive namespace from numpy and matplotlib\n"
+          ]
+        }
+      ],
       "source": [
         "%pylab inline \n",
         "import pandas as pd\n",
@@ -130,7 +163,7 @@
       "metadata": {
         "id": "w1-2oEFJln1o"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -159,10 +192,22 @@
         "print(nx.info(G))"
       ],
       "metadata": {
-        "id": "TcOtOsOvl108"
+        "id": "TcOtOsOvl108",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b5b07c00-45ec-402f-960a-0ce165187912"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MultiDiGraph with 281903 nodes and 2312497 edges\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -171,10 +216,22 @@
         "print(W.shape)"
       ],
       "metadata": {
-        "id": "IISoWVnBl4aC"
+        "id": "IISoWVnBl4aC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "71383970-ae67-4b19-d2e3-a0eff1bf609d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(281903, 281903)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -184,10 +241,25 @@
         "arr[arr==0].shape"
       ],
       "metadata": {
-        "id": "yczlqxH5l6Ej"
+        "id": "yczlqxH5l6Ej",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "db2b8b5e-5221-41fb-cbda-d97a3bc5ad37"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 172)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -387,7 +459,7 @@
         "\n",
         "---\n",
         "\n",
-        "# Q3: Boxes and Balls Model (25pt)\n",
+        "# Q3: Boxes and Balls Model (30pt)\n",
         "If we have three boxes and each box contains red and white balls. \n",
         "- In box 1, it has 5 red balls and 5 white balls.\n",
         "\n",
@@ -415,7 +487,7 @@
         "\\end{align}\n",
         "\n",
         "\n",
-        "## Q3.1: Backward Algorithm (10pt)\n",
+        "## Q3.1: Backward Algorithm (15pt)\n",
         "Use backward algorithm to calculate $p(O|\\mm\\theta)$. You may use python code to help your calculation."
       ],
       "metadata": {
@@ -483,7 +555,7 @@
         "\n",
         "---\n",
         "\n",
-        "# Q4: Theory in Hidden Markov Model (30pt)\n",
+        "# Q4: Theory in Hidden Markov Model (25pt)\n",
         "Consider the hidden Markov model specified by the following graph\n",
         "<img src=\"https://github.com/yexf308/AppliedStochasticProcess/blob/main/HW/HW4/DAG.png?raw=true\" width=\"800\" />\n",
         "\n",
@@ -547,7 +619,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Q4.2.2: (10pt)\n",
+        "### Q4.2.2: (5pt)\n",
         "Show that \n",
         "\\begin{align}\n",
         "p(h_{t-1}| h_t, v_{1:n}) =\\frac{\\alpha(h_{t-1})}{\\alpha(h_t)}p(h_t| h_{t-1})p(v_t|h_t)\n",
