--- a/HW/HW5/560Sp22HW5.ipynb
+++ b/HW/HW5/560Sp22HW5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpa/2eDNH0IXfmJYUNxZzZ",
+      "authorship_tag": "ABX9TyOuIT6eLCBbVsx1GuVBgH4U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,12 @@
         "id": "WVkmK8fXL-My"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "from scipy.special import logsumexp"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -131,6 +136,45 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "def forward(log_initial, log_transition, log_emission, v):\n",
+        "    \"\"\"\n",
+        "    Args:\n",
+        "        initial: a vector of length N\n",
+        "        transition: a matrix of shape N * N\n",
+        "        emission: a matrix of shape V * N\n",
+        "        v: observed sequence, a vector of length T\n",
+        "        \n",
+        "    Returns:\n",
+        "        log_alpha: a matrix of shape T * N, log_alpha[t, n] denote the sum of all possible latent state sequences ending at step t, state n\n",
+        "        log_Z: a float number\n",
+        "    \"\"\"\n",
+        "    T = len(v)\n",
+        "    N = log_emission.shape[1]\n",
+        "    \n",
+        "    log_alpha = np.zeros((T, N)) \n",
+        "    log_alpha[0] = log_emission[v[0]] + log_initial\n",
+        "    \n",
+        "    for t in range(1, T):\n",
+        "        log_emission_t = log_emission[v[t]]\n",
+        "        log_alpha[t] = logsumexp(log_alpha[t - 1].reshape(N, 1) +\n",
+        "                                 log_transition + \n",
+        "                                 log_emission_t.reshape(1, N),\n",
+        "                                 axis=0) \n",
+        "                                         \n",
+        "\n",
+        "    log_Z = logsumexp(log_alpha[T - 1], axis=0)  \n",
+        "    return log_alpha, log_Z"
+      ],
+      "metadata": {
+        "id": "mD5YvizptVCs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def sampling(log_initial, log_transition, log_emission, v):\n",
         "    \"\"\"\n",
         "    Args:\n",
@@ -142,6 +186,7 @@
         "    Returns:\n",
         "        h: sampled sequence, a vector of length T\n",
         "    \"\"\"\n",
+        "    # Your code starts here.\n",
         "    return"
       ],
       "metadata": {
