--- a/HW/HW3/560Sp23HW3.ipynb
+++ b/HW/HW3/560Sp23HW3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNUG0pPQVo6Jr/1kMAp0Unw",
+      "authorship_tag": "ABX9TyPK63rQlybv6YbwblKmyFqb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "TGmU_39Swl-w",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "435953f0-0ab6-489f-91a4-9f56db54ae06"
+        "outputId": "b606dd8b-3c25-471f-a813-297595c178e6"
       },
       "outputs": [
         {
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "Pm0HxUHc0eyi"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -402,35 +402,35 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "965485c2-af14-4a6a-e3b9-71e647690680"
+        "outputId": "e6501354-1627-4b59-800d-86b6a4543774"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-02-02 21:18:15--  https://raw.githubusercontent.com/yexf308/AppliedStochasticProcess/main/HW/HW2/1b_benchmark.train.tokens?raw=true\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.111.133, 185.199.108.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "--2023-03-30 01:28:25--  https://raw.githubusercontent.com/yexf308/AppliedStochasticProcess/main/HW/HW2/1b_benchmark.train.tokens?raw=true\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 8422714 (8.0M) [text/plain]\n",
             "Saving to: ‘1b_benchmark.train.tokens’\n",
             "\n",
-            "1b_benchmark.train. 100%[===================>]   8.03M  --.-KB/s    in 0.04s   \n",
+            "1b_benchmark.train. 100%[===================>]   8.03M  41.3MB/s    in 0.2s    \n",
             "\n",
-            "2023-02-02 21:18:16 (201 MB/s) - ‘1b_benchmark.train.tokens’ saved [8422714/8422714]\n",
+            "2023-03-30 01:28:26 (41.3 MB/s) - ‘1b_benchmark.train.tokens’ saved [8422714/8422714]\n",
             "\n",
-            "--2023-02-02 21:18:17--  https://raw.githubusercontent.com/yexf308/AppliedStochasticProcess/main/HW/HW2/1b_benchmark.test.tokens?raw=true\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.111.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "--2023-03-30 01:28:26--  https://raw.githubusercontent.com/yexf308/AppliedStochasticProcess/main/HW/HW2/1b_benchmark.test.tokens?raw=true\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1650147 (1.6M) [text/plain]\n",
             "Saving to: ‘1b_benchmark.test.tokens’\n",
             "\n",
-            "1b_benchmark.test.t 100%[===================>]   1.57M  --.-KB/s    in 0.02s   \n",
+            "1b_benchmark.test.t 100%[===================>]   1.57M  --.-KB/s    in 0.1s    \n",
             "\n",
-            "2023-02-02 21:18:17 (69.4 MB/s) - ‘1b_benchmark.test.tokens’ saved [1650147/1650147]\n",
+            "2023-03-30 01:28:26 (12.5 MB/s) - ‘1b_benchmark.test.tokens’ saved [1650147/1650147]\n",
             "\n"
           ]
         }
@@ -486,7 +486,7 @@
       "metadata": {
         "id": "3TmWIyNRX_Hb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -503,9 +503,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2ad22c93-4647-42d4-809c-f0de8188f79d"
+        "outputId": "fd8290cb-8391-42fa-abe5-c0e33d2b3cf9"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -543,9 +543,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "78a9562e-59cc-4242-f68e-d04e8928adf0"
+        "outputId": "08504d34-e834-4e8d-d25d-e59367bd03b4"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -615,7 +615,7 @@
         "            t = clist[cindex]\n",
         "            self.unigram_freqs[(t)] = self.unigram_freqs.get((t),0) + 1\n",
         "\n",
-        "        self.unigram_corpus_length = sum(self.unigram_freqs.values())\n",
+        "        self.unigram_corpus_length = sum(list(self.unigram_freqs.values()))\n",
         "        self.num_unique_unigrams = len(list(self.unigram_freqs.keys()))\n",
         "\n",
         "    def fit_bigram(self, tokens):\n",
@@ -625,7 +625,7 @@
         "          t1, t2 =  clist[cindex], clist[cindex+1]\n",
         "          self.bigram_freqs[(t1, t2)] = self.bigram_freqs.get((t1, t2), 0) + 1\n",
         "\n",
-        "      self.bigram_corpus_length = sum(self.bigram_freqs.values()) \n",
+        "      self.bigram_corpus_length = sum(list(self.bigram_freqs.values())) \n",
         "      self.num_unique_bigrams = len(list(self.bigram_freqs.keys()))   \n",
         "\n",
         "    def get_unigram_probability(self, unigram): \n",
@@ -683,13 +683,110 @@
     {
       "cell_type": "code",
       "source": [
-        "# Your code starts here. "
+        "# Your code starts here. \n",
+        "LM =LanguageModel()\n",
+        "LM.fit_bigram(train_data)\n",
+        "LM.fit_unigram(train_data)\n",
+        "LM.bigram_corpus_length"
       ],
       "metadata": {
-        "id": "XI-c6AAwBlHQ"
+        "id": "XI-c6AAwBlHQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "87747a0f-7972-48f0-ced3-aa5c7ad32807"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1622905"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "LM.bigram_freqs.get((0, 1), 0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lr6B3E7MJCgS",
+        "outputId": "f5b0931d-d163-472c-e4d2-4b761da9b1bd"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "43"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "LM.unigram_freqs.get(0, 0) "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YoVSf699L9lp",
+        "outputId": "e47c3dd6-22cc-4e97-a262-dc414d4f7035"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "61530"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "LM.get_bigram_probability((0,1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3g7NG_XcMXzA",
+        "outputId": "84a27f57-6b5c-47a2-a4ef-afc57fd00bc6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.0006988460913375589"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
     }
   ]
 }
