--- a/HW/HW2/560Sp23HW2.ipynb
+++ b/HW/HW2/560Sp23HW2.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyN5Jy78dG9qXBNlGCfPW9R/",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/yexf308/AppliedStochasticProcess/blob/main/HW/HW2/560Sp23HW2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -270,8 +258,14 @@
         "## Q2.2: Dice Problem (10pt)\n",
         "Two players bet on roll(s) of the total of two standard six-face dice. Player A bets that a\n",
         "sum of 12 will occur first. Player B bets that two consecutive 7s will occur first. The\n",
-        "players keep rolling the dice and record the sums until one player wins. What is the\n",
-        "probability that A will win?\n"
+        "players keep rolling the dice and record the sums until one player wins. \n",
+        "\n",
+        "- What is the\n",
+        "probability that A will win?\n",
+        "\n",
+        "- Please design a Monte Carlo Simulation using numpy and scipy to verify your solution.\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "a-3P1K27vbae"
@@ -285,6 +279,17 @@
       "metadata": {
         "id": "QbBaHmLjv3wz"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# your code starts here"
+      ],
+      "metadata": {
+        "id": "EbdgQZRZydJf"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
